k8s/apps/media-stack/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - env:
        - name: PUID
          value: '1000'
        - name: PGID
          value: '1000'
        - name: TZ
          value: Europe/London
        image: lscr.io/linuxserver/radarr:latest
        name: radarr
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: radarr-data-0
        - mountPath: /data
          name: media-data
        - mountPath: /downloads
          name: media-data
          subPath: torrents
      volumes:
      - name: radarr-data-0
        persistentVolumeClaim:
          claimName: radarr-data-0
      - name: media-data
        persistentVolumeClaim:
          claimName: media-data
