k8s/apps/media-stack/vpn-stack-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-stack
  namespace: default
  labels:
    app: vpn-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-stack
  template:
    metadata:
      labels:
        app: vpn-stack
    spec:
      enableServiceLinks: false
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "flaresolverr"
        - "gluetun"
        - "prowlarr"
        - "qbittorrent"
      containers:
      # 1. Gluetun (VPN)
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - containerPort: 8090
          name: qbittorrent
        - containerPort: 9696
          name: prowlarr
        volumeMounts:
        - name: gluetun-data-0
          mountPath: /gluetun
        - name: dev-net-tun
          mountPath: /dev/net/tun

      # 2. qBittorrent
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        volumeMounts:
        - name: qbittorrent-data-0
          mountPath: /config
        - name: media-data
          mountPath: /data
        - name: media-data
          mountPath: /downloads
          subPath: torrents

      # 3. Prowlarr
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        volumeMounts:
        - name: prowlarr-data-0
          mountPath: /config

      # 4. Flaresolverr
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
      volumes:
      - name: dev-net-tun
        hostPath:
          path: /dev/net/tun
      - name: gluetun-data-0
        persistentVolumeClaim:
          claimName: gluetun-data-0
      - name: qbittorrent-data-0
        persistentVolumeClaim:
          claimName: qbittorrent-data-0
      - name: media-data
        persistentVolumeClaim:
          claimName: media-data
      - name: prowlarr-data-0
        persistentVolumeClaim:
          claimName: prowlarr-data-0
