k8s/apps/media-stack/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: default
spec:
  ports:
  - name: port-8096
    port: 8096
    targetPort: 8096
  selector:
    app: jellyfin
