k8s/apps/media-stack/jellyseerr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: default
spec:
  ports:
  - name: port-5055
    port: 5055
    targetPort: 5055
  selector:
    app: jellyseerr
