k8s/apps/media-stack/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: default
spec:
  ports:
  - name: webui
    port: 9696
    targetPort: 9696
  selector:
    app: vpn-stack
