k8s/apps/media-stack/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: default
spec:
  ports:
  - name: webui
    port: 8090
    targetPort: 8090
  selector:
    app: vpn-stack
