k8s/apps/media-stack/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: default
spec:
  ports:
  - name: port-7878
    port: 7878
    targetPort: 7878
  selector:
    app: radarr
