k8s/apps/media-stack/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  ports:
  - name: port-8989
    port: 8989
    targetPort: 8989
  selector:
    app: sonarr
