k8s/apps/media-stack/vpn-stack-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-stack
  namespace: default
spec:
  selector:
    app: vpn-stack
  ports:
  - name: qbittorrent
    port: 8090
    targetPort: 8090
  - name: prowlarr
    port: 9696
    targetPort: 9696
